syntax = "proto3";

package tsr.v1; // technical support requests 

import "google/api/annotations.proto";

option go_package = "github.com/volkov-d-a/adm-requests-tracker/internal/generated;tsr_v1";

service UserService {
    rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse){
        option (google.api.http) = {
            post: "/v1/user"
            body: "*"
        };
    };

    rpc UserAuth(UserAuthRequest) returns (UserAuthResponse) {
        option (google.api.http) = {
            post: "/v1/user/auth"
            body: "*"
        };
    };

    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {
        option (google.api.http) = {
            delete: "/v1/user"
            body: "*"
        };
    };

    rpc GetUsers(GetUsersRequest) returns (GetUsersResponse) {
        option (google.api.http) = {
            get: "/v1/users/{token}"
        };
    };
}

message UserAuthRequest {
    string login = 1;
    string password = 2;
}

message UserAuthResponse {
    string uuid = 1;
    string first_name = 2;
    string last_name = 3;
    string department = 4;
    string login = 5;
    string Role = 6;
    string token = 7;
}

message RegisterUserRequest {
    string first_name = 1;
    string last_name = 2;
    string department = 3;
    string login = 4;
    string password = 5;
    string role = 6; // user, employee, admin
    string token = 7;
}

message RegisterUserResponse {
    string uuid = 1;
}

message DeleteUserRequest {
    string uuid = 1;
    string token = 2;
}

message DeleteUserResponse {}

message GetUsersRequest {
    string token = 1;
}

message GetUsersResponse {
    message User {
        string uuid = 1;
        string first_name = 2;
        string last_name = 3;
        string department = 4;
        string login = 5;
        string Role = 6;
    }
    repeated User users = 1;
}